pyramid added to the cluster